--- a/Milestone_1/assets/css/style.css
+++ b/Milestone_1/assets/css/style.css
@@ -11,10 +11,27 @@
 
 .green {
   background-color: #009688;
-  height: 10vh;
+  height: 12vh;
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
 }
 
 .gray {
   background-color: #dbdbd3;
-  height: 90vh;
+  height: 88vh;
+  display: flex;
+  justify-content: center;
+}
+
+.users {
+  width: 1100px;
+  height: 10vh;
+  background-color: #eaeaea;
+}
+
+.chat_users {
+  width: 1100px;
+  height: 85vh;
+  background-color: rgb(160, 158, 158);
 }
