--- a/Milestone_1/assets/css/style.css
+++ b/Milestone_1/assets/css/style.css
@@ -117,3 +117,34 @@
   text-decoration: underline;
   color: #547698;
 }
+
+.search {
+  width: 400px;
+  height: 10vh;
+  background-color: #fafafa;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.barra {
+  width: 350px;
+  height: 7vh;
+  background-color: white;
+  border-radius: 4px;
+  border: 1px solid #f5f5f5;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.research {
+  width: 300px;
+  height: 5vh;
+  border: none;
+  font-size: 15px;
+}
+
+.new_search {
+  padding: 1rem;
+}
