--- a/Milestone_1/assets/css/style.css
+++ b/Milestone_1/assets/css/style.css
@@ -35,6 +35,7 @@
   width: 1100px;
   height: 85vh;
   background-color: rgb(199, 198, 198);
+  display: flex;
 }
 
 .user_name {
@@ -153,4 +154,41 @@
   width: 400px;
   height: 63vh;
   background-color: white;
+  overflow-y: scroll;
+}
+
+/* .message_area {
+  width: calc(1100px - 400px);
+  height: 76vh;
+} */
+
+.chat {
+  width: calc(1100px - 400px);
+  height: 76vh;
+  background-image: url("../img/mine.jpg");
+  overflow-y: scroll;
+  display: flex;
+}
+
+.new_message {
+  width: calc(1100px - 400px);
+  height: calc(85vh - 76vh);
+  background-color: #f3eeea;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 2rem;
+}
+
+.smile,
+.microphone {
+  color: #6b7376;
+}
+
+.digit_message {
+  width: 550px;
+  height: 45px;
+  border-radius: 5px;
+  border: none;
+  padding: 1rem;
 }
