--- a/Milestone_1/assets/css/style.css
+++ b/Milestone_1/assets/css/style.css
@@ -186,3 +186,17 @@
   border: none;
   padding: 1rem;
 }
+
+.avatar_contacts {
+  width: 100%;
+  height: 110px;
+  padding-left: 1rem;
+  display: flex;
+  align-items: center;
+  border-bottom: 1px solid #f5f5f5;
+}
+.icon_avatar {
+  width: 70px;
+  border-radius: 100%;
+  margin-right: 10px;
+}
