--- a/Milestone_2/assets/css/style.css
+++ b/Milestone_2/assets/css/style.css
@@ -156,13 +156,6 @@
   background-color: white;
   overflow-y: scroll;
 }
-.chat {
-  width: calc(1100px - 400px);
-  height: 76vh;
-  background-image: url("../img/mine.jpg");
-  overflow-y: scroll;
-  display: flex;
-}
 
 .new_message {
   width: calc(1100px - 400px);
@@ -206,15 +199,36 @@
   margin-right: 10px;
 }
 
-.message {
-  width: 100%;
-  height: 20px;
+.chat {
+  width: calc(1100px - 400px);
+  height: 76vh;
+  background-image: url("../img/mine.jpg");
+  overflow-y: scroll;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .sent {
-  background-color: cornflowerblue;
+  background-color: #d5f9ba;
+  align-self: flex-end;
+  margin: 1rem;
+  border-radius: 10px;
+  padding: 0.5rem;
 }
 
 .received {
-  background-color: crimson;
+  background-color: white;
+  align-self: flex-start;
+  height: 50px;
+  margin: 1rem;
+  border-radius: 10px;
+  padding: 0.5rem;
+}
+
+.date {
+  font-size: 12px;
+  color: gray;
+  padding: 0.2rem;
+  text-align: end;
 }
